--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aremu Smog</title>
+    <title>Aremu Smog - Frontend Developer</title>
 </head>
 <body style="max-width: 500px;">
     <header>Aremu Smog - Frontend Developer</header>
