feat: make font sans-serif

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aremu Smog - Frontend Developer</title>
 </head>
-<body style="max-width: 500px;">
+<body style="max-width: 500px; font-family: Arial, Helvetica, sans-serif;">
     <header>Aremu Smog - Frontend Developer</header>
 
     <main>
