ao_feat: website mvp

--- a/index.html
+++ b/index.html
@@ -8,25 +8,32 @@
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
-		<header>
-			<div><img src="" /></div>
-			<h1>Aremu Smog - Frontend Developer</h1>
+		<header class="header">
+			<img class="header__image" src="./assets/image/aremusmog.jpeg" />
+			<h1 class="header__title">Aremu Smog - Frontend Developer</h1>
 		</header>
 
+		<!-- <div class="net">
+			<div></div>
+			<div></div>
+			<div></div>
+			<div></div>
+		</div> -->
 		<main>
-			<article>
+			<div></div>
+			<article class="description">
 				<p>
-					Hi,<br />
+					Hi,<br /><br />
 
-					I make everyone call me Aremu. <br />
+					I make everyone call me "Aremu". <br /><br />
 
 					I care deeply about making things work and look pretty in the browser.
-					<br />
+					<br /><br />
 
 					I currently work as a frontend engineer at
 					<a href="https://quidax.com" target="_blank">Quidax</a> contributing
 					actively to <a href="https://basqet.com">Basqet</a> which makes it
-					easty for merchants receive payments with Cryptocurrency. <br />
+					easty for merchants receive payments with Cryptocurrency. <br /><br />
 					I am an engineering partner at
 					<a href="https://fourthcanvas.co">FourthCanvas</a> and I lead the team
 					at <a href="https://www.youtube.com/c/webboss">web boss</a>.
