ao_feat: mobile version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header class="header">
 			<img class="header__image" src="./assets/image/aremusmog.jpeg" />
-			<h1 class="header__title">Aremu Smog - Frontend Developer</h1>
+			<h1 class="header__title">Aremu Smog - Frontend Engineer</h1>
 		</header>
 
 		<!-- <div class="net">
@@ -20,10 +20,9 @@
 			<div></div>
 		</div> -->
 		<main>
-			<div></div>
 			<article class="description">
 				<p>
-					Hi,<br /><br />
+					Hi there,<br /><br />
 
 					I make everyone call me "Aremu". <br /><br />
 
@@ -33,7 +32,7 @@
 					I currently work as a frontend engineer at
 					<a href="https://quidax.com" target="_blank">Quidax</a> contributing
 					actively to <a href="https://basqet.com">Basqet</a> which makes it
-					easty for merchants receive payments with Cryptocurrency. <br /><br />
+					easy for merchants receive payments with Cryptocurrency. <br /><br />
 					I am an engineering partner at
 					<a href="https://fourthcanvas.co">FourthCanvas</a> and I lead the team
 					at <a href="https://www.youtube.com/c/webboss">web boss</a>.
