ao_fix: update text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					I currently work as a frontend engineer at
 					<a href="https://quidax.com" target="_blank">Quidax</a> contributing
 					actively to <a href="https://basqet.com">Basqet</a> which makes it
-					easy for merchants receive payments with Cryptocurrency. <br /><br />
+					easy for merchants to receive payments with Cryptocurrency.
+					<br /><br />
 					I am an engineering partner at
 					<a href="https://fourthcanvas.co">FourthCanvas</a> and I lead the team
 					at <a href="https://www.youtube.com/c/webboss">web boss</a>.
