--- a/index.html
+++ b/index.html
@@ -40,10 +40,19 @@
 				</p>
 				<nav>
 					<ul>
-						<li><a href="">Download CV</a></li>
-						<li><a href="">GitHub</a></li>
-						<li><a href="">Twitter</a></li>
-						<li><a href="">LinkedIn</a></li>
+						<li>
+							<a href="./assets/Aremu Oluwagbamila.pdf" download=""
+								>Download CV</a
+							>
+						</li>
+						<li><a href="https://github.com/aremu-smog">GitHub</a></li>
+						<li><a href="https://aremusmog.medium.com/">Medium</a></li>
+						<li>
+							<a
+								href="https://www.linkedin.com/in/oluwagbamila-smog-aremu-585240129/"
+								>LinkedIn</a
+							>
+						</li>
 					</ul>
 				</nav>
 			</article>
