--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Aremu Smog - Frontend Developer</title>
+		<meta
+			name="description"
+			content="Aremu Oluwagbamila (SMOG) is a frontend engineer based in Ibadan, Nigeria"
+		/>
+		<title>Aremu Smog - Frontend Engineer</title>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 	</head>
 	<body>
