ao_feat: mvp for collecting visitor name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<main>
 			<article class="description">
 				<p>
-					Hi there,<br /><br />
+					Hi <span id="visitors-name-display">there</span>,<br /><br />
 
 					I make everyone call me "Aremu". <br /><br />
 
@@ -60,6 +60,20 @@
 					</ul>
 				</nav>
 			</article>
+
+			<div class="visitor" id="visitor">
+				<section>
+					<h2 class="visitor__title">
+						Thanks for stopping by. What's your name
+						<input id="visitors-name" /> ?
+					</h2>
+					<p class="visitor__description">
+						Press "Enter" after entering your name or press any key to "skip"
+					</p>
+				</section>
+			</div>
 		</main>
+
+		<script src="./assets/js/index.js"></script>
 	</body>
 </html>
