feat: update bio

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 				<p>
 					Hi there,<br /><br />
 
-					I make everyone call me "Aremu". <br /><br />
+					You are already know my name is "Aremu". <br /><br />
 
 					I care deeply about making things work and look pretty in the browser.
 					<br /><br />
 
 					I currently work as a frontend engineer at
 					<a href="https://quidax.com" target="_blank">Quidax</a> contributing
-					actively to <a href="https://basqet.com">Basqet</a> which makes it
-					easy for merchants to receive payments with Cryptocurrency.
-					<br /><br />
+					actively to <a href="https://basqet.com">Basqet</a> a fast and
+					reliable way to receive payments anywhere in the world using
+					cryptocurrency. <br /><br />
 					I am an engineering partner at
 					<a href="https://fourthcanvas.co">FourthCanvas</a> and I lead the team
 					at <a href="https://www.youtube.com/c/webboss">web boss</a>.
