ao_fix: issue with name after entering user, format the username

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<input id="visitors-name" /> ?
 					</h2>
 					<p class="visitor__description">
-						Press "Enter" after entering your name or press any key to "skip"
+						Press "Enter" after entering your name or press "S" to "skip"
 					</p>
 				</section>
 			</div>
