--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
 						<input id="visitors-name" /> ?
 					</h2>
 					<p class="visitor__description">
-						Press "Enter" after entering your name or press "S" to "skip"
+						Press "Enter" after entering your name or you could
+						<a href="#" id="skip">skip this</a>
 					</p>
 				</section>
 			</div>
