--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 				<section>
 					<h2 class="visitor__title">
 						Thanks for stopping by. What's your name
-						<input id="visitors-name" /> ?
+						<form id="visitors-form">
+							<input id="visitors-name" autofocus />
+						</form>
+						?
 					</h2>
 					<p class="visitor__description">
 						Press "Enter" after entering your name or you could
