--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<p>
 					Hi there,<br /><br />
 
-					You are already know my name is "Aremu". <br /><br />
+					Everyone calls me "Aremu". <br /><br />
 
 					I care deeply about making things work and look pretty in the browser.
 					<br /><br />
