--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 	<body>
 		<header class="header">
 			<h1 class="header__title">Aremu Smog</h1>
-			<p>Senior Frontend Engineer — Living in Ibadan, Nigeria 🇳🇬</p>
+			<p>
+				Senior Frontend Engineer <span class="hide__mobile">—</span
+				><br class="hide__pc" />
+				Living in Ibadan, Nigeria 🇳🇬
+			</p>
 		</header>
 
 		<main>
@@ -46,15 +50,13 @@
 					<ul>
 						<li>
 							<a
-								href="https://www.linkedin.com/in/oluwagbamila-smog-aremu-585240129/"
+								href="https://www.linkedin.com/in/oluwagbamila-aremu-585240129/"
 								target="_blank"
 								>LinkedIn</a
 							>
 						</li>
 						<li>
-							<a
-								href="https://www.linkedin.com/in/oluwagbamila-smog-aremu-585240129/"
-								target="_blank"
+							<a href="https://www.youtube.com/@webboss" target="_blank"
 								>YouTube</a
 							>
 						</li>
