feat/open-graph-info

--- a/index.html
+++ b/index.html
@@ -8,8 +8,46 @@
 			name="description"
 			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
 		/>
-		<title>Aremu Smog - Frontend Engineer</title>
+		<title>Aremu Smog - Senior Frontend Engineer</title>
 		<link rel="stylesheet" href="./assets/css/style.css" />
+		<meta
+			name="description"
+			content="Serve yourself if 5,000 NGN is not too small for you"
+		/>
+		<meta
+			name="keywords"
+			content="Aremu, Aremu Oluwagbamila, Aremu Smog, Frontend Engineer, Software Engineer"
+		/>
+		<meta name="author" content="Aremu Smog" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Aremu Smog - Senior Frontend Engineer" />
+		<meta
+			property="og:description"
+			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+		/>
+		<meta property="og:url" content="https://www.aremusmog.com" />
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/aremusmog/image/upload/v1737230639/Aremu_Smog_ezl4qj.jpg"
+		/>
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="Aremu Smog - Senior Frontend Engineer"
+		/>
+		<meta
+			name="twitter:description"
+			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+		/>
+		<meta name="twitter:url" content="https://www.aremusmog.com" />
+		<meta
+			name="twitter:image"
+			content="https://res.cloudinary.com/aremusmog/image/upload/v1737230639/Aremu_Smog_ezl4qj.jpg"
+		/>
 	</head>
 	<body>
 		<header class="header">
