--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				</p>
 				<p>
 					I currently work as a senior frontend engineer at
-					<a href="https://quidax.com" target="_blank">Quidax</a> where I serve
+					<a href="https://quidax.ng" target="_blank">Quidax</a> where I serve
 					as the technical lead for the growth team which is primarily
 					responsible for ensuring a smooth onboarding experience for new users
 					and getting them to carryout their first trade in the shortest time
@@ -79,7 +79,7 @@
 
 				<p>
 					Previously, I have worked with teams at:
-					<a href="https://quidax.com" target="_blank">FourthCanvas</a>,
+					<a href="https://fourthcanvas.co" target="_blank">FourthCanvas</a>,
 					<a href="https://ideo.com" target="_blank">IDEO</a>,
 					<a href="https://deardesigner.xyz" target="_blank">DearDesigner</a>,
 					and <a href="https://basqet.com" target="_blank">Basqet</a>.
