feat/update-description

--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
 				</p>
 				<p>
 					I currently work as a senior frontend engineer at
-					<a href="https://quidax.ng" target="_blank">Quidax</a> where I serve
-					as the technical lead for the growth team which is primarily
-					responsible for ensuring a smooth onboarding experience for new users
-					and getting them to carryout their first trade in the shortest time
-					possible.
+					<a href="https://quidax.io" target="_blank">Quidax</a> where I lead
+					growth team which is primarily responsible for ensuring a smooth
+					onboarding experience for new users and getting them to carryout their
+					first trade in the shortest time possible.
 				</p>
 
 				<p>
