chore/update-name

--- a/books/index.html
+++ b/books/index.html
@@ -13,7 +13,7 @@
 			name="description"
 			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
 		/>
-		<title>Aremu Smog - Senior Frontend Engineer</title>
+		<title>Aremu Oluwagbamila - Senior Frontend Engineer</title>
 		<link rel="stylesheet" href="../assets/css/style.css" />
 		<link rel="stylesheet" href="./css/books.css" />
 		<meta
@@ -53,7 +53,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1 class="header__title">Aremu Smog</h1>
+			<h1 class="header__title">Aremu Oluwagbamila</h1>
 			<p>Books 2020 — <span id="most_recent_year">2025</span> 📚</p>
 		</header>
 
