--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+			content="Aremu Oluwagbamila is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
 		/>
 		<meta name="twitter:url" content="https://www.aremusmog.com" />
 		<meta
@@ -56,7 +56,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1 class="header__title">Aremu Smog</h1>
+			<h1 class="header__title">Aremu Oluwagbamila</h1>
 			<p>
 				Senior Frontend Engineer <span class="hide__mobile">—</span
 				><br class="hide__pc" />
