feat/update-info

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1 class="header__title">Aremu Oluwagbamila</h1>
+			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
 			<p>
 				Senior Frontend Engineer <span class="hide__mobile">—</span
 				><br class="hide__pc" />
@@ -66,27 +66,38 @@
 
 		<main>
 			<article class="description">
-				<p>Hi there,</p>
+				<p>Hi there 👋,</p>
 				<p>Everyone calls me "Aremu".</p>
 
 				<p>
 					I care deeply about making things work and looking pretty in the
-					browser and on mobile phones.
+					browser 🌎 and on mobile phones📱.
 				</p>
 				<p>
-					I currently work as a senior frontend engineer at
-					<a href="https://quidax.io" target="_blank">Quidax</a> where I lead
-					growth team which is primarily responsible for ensuring a smooth
-					onboarding experience for new users and getting them to carryout their
-					first trade in the shortest time possible.
+					I am currently a senior frontend engineer at
+					<a href="https://quidax.io" target="_blank">Quidax</a> where I work as
+					the technical lead for the Growth team.
 				</p>
 
 				<p>
 					Previously, I have worked with teams at:
-					<a href="https://fourthcanvas.co" target="_blank">FourthCanvas</a>,
-					<a href="https://ideo.com" target="_blank">IDEO</a>,
-					<a href="https://deardesigner.xyz" target="_blank">DearDesigner</a>,
-					and <a href="https://basqet.com" target="_blank">Basqet</a>.
+					<a href="https://fourthcanvas.co" target="_blank">FourthCanvas</a> —
+					as an engineering partner,
+					<a href="https://ideo.com" target="_blank">IDEO</a> — as a frontend
+					engineer,
+					<a href="https://deardesigner.xyz" target="_blank">DearDesigner</a> —
+					as a fullstack engineer, and
+					<a href="https://basqet.com" target="_blank">Basqet</a> — as a
+					frontend engineer.
+				</p>
+				<p>
+					I am an <a href="books/">avid reader📚</a>, amateur
+					<a
+						href="https://strava.app.link/G5o0UpOKPSb"
+						target="_blank"
+						rel="no-follow"
+						>biker 🚴‍♀️</a
+					>, and salsa dancer 💃🕺🏼
 				</p>
 				<nav class="nav">
 					<ul>
