--- a/books/index.html
+++ b/books/index.html
@@ -53,7 +53,7 @@
 	</head>
 	<body>
 		<header class="header">
-			<h1 class="header__title">Aremu Oluwagbamila</h1>
+			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
 			<p>Books 2020 — <span id="most_recent_year">2025</span> 📚</p>
 		</header>
 
