--- a/index.html
+++ b/index.html
@@ -91,12 +91,12 @@
 					frontend engineer.
 				</p>
 				<p>
-					I am an <a href="books/">avid reader📚</a>, amateur
+					I am an <a href="books/">avid reader 📚</a>,
 					<a
 						href="https://strava.app.link/G5o0UpOKPSb"
 						target="_blank"
 						rel="no-follow"
-						>biker 🚴‍♀️</a
+						>amateur biker 🚴‍♀️</a
 					>, and salsa dancer 💃🕺🏼
 				</p>
 				<nav class="nav">
