--- a/index.html
+++ b/index.html
@@ -53,8 +53,32 @@
 			name="twitter:image"
 			content="https://res.cloudinary.com/aremusmog/image/upload/v1737230639/Aremu_Smog_ezl4qj.jpg"
 		/>
+		<!-- Google Tag Manager -->
+		<script>
+			;(function (w, d, s, l, i) {
+				w[l] = w[l] || []
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" })
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : ""
+				j.async = true
+				j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl
+				f.parentNode.insertBefore(j, f)
+			})(window, document, "script", "dataLayer", "GTM-NSRBMMF7")
+		</script>
+		<!-- End Google Tag Manager -->
 	</head>
 	<body>
+		<!-- Google Tag Manager (noscript) -->
+		<noscript
+			><iframe
+				src="https://www.googletagmanager.com/ns.html?id=GTM-NSRBMMF7"
+				height="0"
+				width="0"
+				style="display: none; visibility: hidden"
+			></iframe
+		></noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<header class="header">
 			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
 			<p>
