feat/update-books-page-meta

--- a/books/index.html
+++ b/books/index.html
@@ -11,9 +11,9 @@
 		/>
 		<meta
 			name="description"
-			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+			content="Looking for something read? Here is pretty much everything I have read since 2020. It includes biographies, Nigerian fiction, business books, financial management and literacy, faith, etc"
 		/>
-		<title>Aremu Oluwagbamila - Senior Frontend Engineer</title>
+		<title>Reading List - Aremu Oluwagbamila</title>
 		<link rel="stylesheet" href="../assets/css/style.css" />
 		<link rel="stylesheet" href="./css/books.css" />
 		<meta
@@ -27,12 +27,12 @@
 		<meta property="og:title" content="Aremu Smog - Senior Frontend Engineer" />
 		<meta
 			property="og:description"
-			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+			content="Looking for something read? Here is pretty much everything I have read since 2020. It includes biographies, Nigerian fiction, business books, financial management and literacy, faith, etc"
 		/>
 		<meta property="og:url" content="https://www.aremusmog.com" />
 		<meta
 			property="og:image"
-			content="https://res.cloudinary.com/aremusmog/image/upload/v1737230639/Aremu_Smog_ezl4qj.jpg"
+			content="https://res.cloudinary.com/aremusmog/image/upload/v1747785551/aremusmog.com/wfjjbbax1lciiy8wyrox.jpg"
 		/>
 
 		<!-- Twitter -->
@@ -43,12 +43,12 @@
 		/>
 		<meta
 			name="twitter:description"
-			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
+			content="Looking for something read? Here is pretty much everything I have read since 2020. It includes biographies, Nigerian fiction, business books, financial management and literacy, faith, etc"
 		/>
 		<meta name="twitter:url" content="https://www.aremusmog.com" />
 		<meta
 			name="twitter:image"
-			content="https://res.cloudinary.com/aremusmog/image/upload/v1737230639/Aremu_Smog_ezl4qj.jpg"
+			content="https://res.cloudinary.com/aremusmog/image/upload/v1747785551/aremusmog.com/wfjjbbax1lciiy8wyrox.jpg"
 		/>
 		<!-- Google Tag Manager -->
 		<script>
