feat/update-webiste-og-image

--- a/books/index.html
+++ b/books/index.html
@@ -24,7 +24,7 @@
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Aremu Smog - Senior Frontend Engineer" />
+		<meta property="og:title" content="Reading List - Aremu Oluwagbamila" />
 		<meta
 			property="og:description"
 			content="Looking for something read? Here is pretty much everything I have read since 2020. It includes biographies, Nigerian fiction, business books, financial management and literacy, faith, etc"
@@ -37,10 +37,7 @@
 
 		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta
-			name="twitter:title"
-			content="Aremu Smog - Senior Frontend Engineer"
-		/>
+		<meta name="twitter:title" content="Reading List - Aremu Oluwagbamila" />
 		<meta
 			name="twitter:description"
 			content="Looking for something read? Here is pretty much everything I have read since 2020. It includes biographies, Nigerian fiction, business books, financial management and literacy, faith, etc"
