--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			name="description"
 			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
 		/>
-		<title>Aremu Smog - Senior Frontend Engineer</title>
+		<title>Aremu Oluwagbamila - Senior Frontend Engineer</title>
 		<link rel="stylesheet" href="./assets/css/style.css" />
 		<meta
 			name="description"
@@ -23,11 +23,14 @@
 			name="keywords"
 			content="Aremu, Aremu Oluwagbamila, Aremu Smog, Frontend Engineer, Software Engineer"
 		/>
-		<meta name="author" content="Aremu Smog" />
+		<meta name="author" content="Aremu Oluwagbamila" />
 
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website" />
-		<meta property="og:title" content="Aremu Smog - Senior Frontend Engineer" />
+		<meta
+			property="og:title"
+			content="Aremu Oluwagbamila - Senior Frontend Engineer"
+		/>
 		<meta
 			property="og:description"
 			content="Aremu Oluwagbamila Smog is a senior frontend engineer with more than 5 years of experience building web and mobile apps across different industries including but not limited to FinTech, eCommerce, Social Media, Marketing, and Agency"
@@ -42,7 +45,7 @@
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta
 			name="twitter:title"
-			content="Aremu Smog - Senior Frontend Engineer"
+			content="Aremu Oluwagbamila - Senior Frontend Engineer"
 		/>
 		<meta
 			name="twitter:description"
