--- a/books/index.html
+++ b/books/index.html
@@ -74,6 +74,16 @@
 		></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 		<header class="header">
+			<nav class="nav">
+				<ul>
+					<li>
+						<a href="/">Home</a>
+					</li>
+					<li>
+						<a href="/books/">Books</a>
+					</li>
+				</ul>
+			</nav>
 			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
 			<p>Books 2020 — <span id="most_recent_year">2025</span> 📚</p>
 		</header>
