--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
 		></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 		<header class="header">
+			<nav class="nav">
+				<ul>
+					<li>
+						<a href="/">Home</a>
+					</li>
+					<li>
+						<a href="/books/">Books</a>
+					</li>
+				</ul>
+			</nav>
 			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
 			<p>
 				Senior Frontend Engineer <span class="hide__mobile">—</span
