feat/website-update

--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
 		></noscript>
 		<!-- End Google Tag Manager (noscript) -->
 		<header class="header">
-			<nav class="nav">
+			<img
+				src="./assets/image/aremu-2025.jpg"
+				alt="Aremu Oluwagbamila (SMOG)"
+				width="200"
+				class="header__image"
+			/>
+			<!-- <nav class="nav">
 				<ul>
 					<li>
 						<a href="/">Home</a>
@@ -92,43 +98,34 @@
 						<a href="/books/">Books</a>
 					</li>
 				</ul>
-			</nav>
+			</nav> -->
 			<h1 class="header__title"><a href="/">Aremu Oluwagbamila</a></h1>
-			<p>
-				Senior Frontend Engineer <span class="hide__mobile">—</span
-				><br class="hide__pc" />
-				Living in Ibadan, Nigeria 🇳🇬
-			</p>
 		</header>
 
 		<main>
 			<article class="description">
-				<p>Hi there 👋,</p>
-				<p>Everyone calls me "Aremu".</p>
+				<p>
+					- Senior Frontend Engineer at
+					<a href="https://quidax.io" target="_blank">Quidax</a>
+				</p>
+				<p>
+					- Engineering Muscle at
+					<a href="https://xtrackr.me" target="_blank">xtrackr</a>
+				</p>
+				<p>
+					- Previously engineering partner at
+					<a href="https://fourthcanvas.co" target="_blank">FourthCanvas</a>
+				</p>
+				<p>
+					- Did engineering things at
+					<a href="https://ideo.com" target="_blank">IDEO</a>,
+					<a href="https://golemon.com" target="_blank">GoLemon</a>,
+					<a href="https://deardesigner.xyz" target="_blank">DearDesigner</a>,
+					and <a href="https://basqet.com" target="_blank">Basqet</a>
+				</p>
 
 				<p>
-					I care deeply about making things work and looking pretty in the
-					browser 🌎 and on mobile phones📱.
-				</p>
-				<p>
-					I am currently a senior frontend engineer at
-					<a href="https://quidax.io" target="_blank">Quidax</a> where I work as
-					the technical lead for the Growth team.
-				</p>
-
-				<p>
-					Previously, I have worked with teams at:
-					<a href="https://fourthcanvas.co" target="_blank">FourthCanvas</a> —
-					as an engineering partner,
-					<a href="https://ideo.com" target="_blank">IDEO</a> — as a frontend
-					engineer,
-					<a href="https://deardesigner.xyz" target="_blank">DearDesigner</a> —
-					as a fullstack engineer, and
-					<a href="https://basqet.com" target="_blank">Basqet</a> — as a
-					frontend engineer.
-				</p>
-				<p>
-					I am an <a href="books/">avid reader 📚</a>,
+					- <a href="books/">Avid reader 📚</a>,
 					<a
 						href="https://strava.app.link/G5o0UpOKPSb"
 						target="_blank"
@@ -139,6 +136,7 @@
 				<nav class="nav">
 					<ul>
 						<li>
+							📲
 							<a
 								href="https://www.linkedin.com/in/oluwagbamila-aremu-585240129/"
 								target="_blank"
